Rework shared entities, https setup
