# TheDashboard.SharedEntities/Controllers/DataConsumerBase.cs
@@ -1,6 +1,6 @@
 //----------------------
 // <auto-generated>
-//     Generated using the NSwag toolchain v13.18.4.0 (NJsonSchema v10.8.0.0 (Newtonsoft.Json v13.0.0.0)) (http://NSwag.org)
+//     Generated using the NSwag toolchain v13.19.0.0 (NJsonSchema v10.9.0.0 (Newtonsoft.Json v13.0.0.0)) (http://NSwag.org)
 // </auto-generated>
 //----------------------
 
@@ -18,7 +18,7 @@ namespace TheDashboard.SharedEntities
 {
     using System = global::System;
 
-    [System.CodeDom.Compiler.GeneratedCode("NSwag", "13.18.4.0 (NJsonSchema v10.8.0.0 (Newtonsoft.Json v13.0.0.0))")]
+    [System.CodeDom.Compiler.GeneratedCode("NSwag", "13.19.0.0 (NJsonSchema v10.9.0.0 (Newtonsoft.Json v13.0.0.0))")]
     public interface IDataConsumerBaseController
     {
 
@@ -29,12 +29,12 @@ namespace TheDashboard.SharedEntities
 
         /// <returns>Created</returns>
 
-        System.Threading.Tasks.Task<DataSourceDto> ConsumerPOSTAsync(DataSourceDto body);
+        System.Threading.Tasks.Task<DataSourceDto> AddAsync(DataSourceDto body);
 
 
         /// <returns>Success</returns>
 
-        System.Threading.Tasks.Task<DataSourceDto> ConsumerPUTAsync(DataSourceDto body);
+        System.Threading.Tasks.Task<DataSourceDto> UpdateAsync(DataSourceDto body);
 
 
         /// <returns>Success</returns>
@@ -44,11 +44,11 @@ namespace TheDashboard.SharedEntities
 
         /// <returns>Accepted</returns>
 
-        System.Threading.Tasks.Task<DataSourceDto> ConsumerDELETEAsync(int id);
+        System.Threading.Tasks.Task<DataSourceDto> DeleteAsync(int id);
 
     }
 
-    [System.CodeDom.Compiler.GeneratedCode("NSwag", "13.18.4.0 (NJsonSchema v10.8.0.0 (Newtonsoft.Json v13.0.0.0))")]
+    [System.CodeDom.Compiler.GeneratedCode("NSwag", "13.19.0.0 (NJsonSchema v10.9.0.0 (Newtonsoft.Json v13.0.0.0))")]
 
     public partial class DataConsumerBaseController : Microsoft.AspNetCore.Mvc.ControllerBase
     {
@@ -69,18 +69,18 @@ namespace TheDashboard.SharedEntities
 
         /// <returns>Created</returns>
         [Microsoft.AspNetCore.Mvc.HttpPost, Microsoft.AspNetCore.Mvc.Route("api/Consumer")]
-        public System.Threading.Tasks.Task<DataSourceDto> ConsumerPOST([Microsoft.AspNetCore.Mvc.FromBody] DataSourceDto body)
+        public System.Threading.Tasks.Task<DataSourceDto> Add([Microsoft.AspNetCore.Mvc.FromBody] DataSourceDto body)
         {
 
-            return _implementation.ConsumerPOSTAsync(body);
+            return _implementation.AddAsync(body);
         }
 
         /// <returns>Success</returns>
         [Microsoft.AspNetCore.Mvc.HttpPut, Microsoft.AspNetCore.Mvc.Route("api/Consumer")]
-        public System.Threading.Tasks.Task<DataSourceDto> ConsumerPUT([Microsoft.AspNetCore.Mvc.FromBody] DataSourceDto body)
+        public System.Threading.Tasks.Task<DataSourceDto> Update([Microsoft.AspNetCore.Mvc.FromBody] DataSourceDto body)
         {
 
-            return _implementation.ConsumerPUTAsync(body);
+            return _implementation.UpdateAsync(body);
         }
 
         /// <returns>Success</returns>
@@ -93,15 +93,15 @@ namespace TheDashboard.SharedEntities
 
         /// <returns>Accepted</returns>
         [Microsoft.AspNetCore.Mvc.HttpDelete, Microsoft.AspNetCore.Mvc.Route("api/Consumer/{id}")]
-        public System.Threading.Tasks.Task<DataSourceDto> ConsumerDELETE(int id)
+        public System.Threading.Tasks.Task<DataSourceDto> Delete(int id)
         {
 
-            return _implementation.ConsumerDELETEAsync(id);
+            return _implementation.DeleteAsync(id);
         }
 
     }
 
-    [System.CodeDom.Compiler.GeneratedCode("NJsonSchema", "13.18.4.0 (NJsonSchema v10.8.0.0 (Newtonsoft.Json v13.0.0.0))")]
+    [System.CodeDom.Compiler.GeneratedCode("NJsonSchema", "13.19.0.0 (NJsonSchema v10.9.0.0 (Newtonsoft.Json v13.0.0.0))")]
     public partial class DataSourceDto
     {
 
@@ -130,9 +130,14 @@ namespace TheDashboard.SharedEntities
         [System.Text.Json.Serialization.JsonIgnore(Condition = System.Text.Json.Serialization.JsonIgnoreCondition.WhenWritingDefault)]   
         public System.Guid DashboardId { get; set; }
 
+        [System.Text.Json.Serialization.JsonPropertyName("sourceType")]
+
+        [System.Text.Json.Serialization.JsonIgnore(Condition = System.Text.Json.Serialization.JsonIgnoreCondition.WhenWritingDefault)]   
+        public string SourceType { get; set; }
+
     }
 
-    [System.CodeDom.Compiler.GeneratedCode("NJsonSchema", "13.18.4.0 (NJsonSchema v10.8.0.0 (Newtonsoft.Json v13.0.0.0))")]
+    [System.CodeDom.Compiler.GeneratedCode("NJsonSchema", "13.19.0.0 (NJsonSchema v10.9.0.0 (Newtonsoft.Json v13.0.0.0))")]
     public partial class ProblemDetails
     {
 
@@ -175,10 +180,12 @@ namespace TheDashboard.SharedEntities
 
 }
 
-#pragma warning restore 1591
-#pragma warning restore 1573
-#pragma warning restore  472
-#pragma warning restore  114
 #pragma warning restore  108
+#pragma warning restore  114
+#pragma warning restore  472
+#pragma warning restore  612
+#pragma warning restore 1573
+#pragma warning restore 1591
+#pragma warning restore 8073
 #pragma warning restore 3016
 #pragma warning restore 8603
